// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoInfoCard renders successfully 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        />
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;

exports[`PhotoInfoCard when card media clicked when onClick passed calls onClick 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        />
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;

exports[`PhotoInfoCard when card media clicked when onPhotoSelected passed calls onPhotoSelected 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        />
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;

exports[`PhotoInfoCard when duplicate button clicked calls onRemoveFromFolder 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        >
          <button
            aria-label="duplicate"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ContentCopyIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2m0 16H8V7h11z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            >
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;

exports[`PhotoInfoCard when remove button clicked calls onRemoveFromFolder 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        >
          <button
            aria-label="remove"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="RemoveCircleOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 11v2h10v-2zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            >
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;

exports[`PhotoInfoCard when zoom button clicked calls onOpenZoom 1`] = `
<body>
  <div>
    <div>
      <div
        class="MuiBox-root css-79elbk"
      >
        <div
          class="MuiCardMedia-root css-10ib1k4-MuiCardMedia-root"
          role="img"
          style="background-image: url(preview);"
          title="name"
        />
        <div
          class="MuiBox-root css-1hpf0kz"
        >
          <button
            aria-label="zoom"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ZoomInIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
              />
              <path
                d="M12 10h-2v2H9v-2H7V9h2V7h1v2h2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            >
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
       
      selectable
      ,
      not selected
      ,
      not isAnySelected
      ,
      toggleSelect passed
      .
    </div>
  </div>
</body>
`;
